Completed the project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body style="font-family: Outfit">
-    <div id="root"></div>
+    <div id="root" style="min-height: 100vh;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
